# mandelbrot-server

./: README.md  pyproject.toml  requirements.txt
scripts/: start.sh
src/: mandelbrot.py  server.py
src/mbserver/render/: __init__.py  hardware.py  mandelbrot.py
src/mbserver/server/: __init__.py
src/mbserver/server/routes/: __init__.py  generate.py
tool/: start
