[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mbserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.125.0",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
